Created attachment 132005 [details] Test sample with text-grid set to lines-and-chars 1. Open the test sample in attached zip file. Both enabled text grid, one uses square page mode and the other doesn't. 2. Use left / right key to move the cursor, sometimes the cursor isn't placed between two characters. 3. Place the cursor between 6th and 7th characters, immediately before full-width comma (,), and type something, the inserted characters show up between 4th and 5th characters.
Confirmed in - Version: 5.4.0.0.alpha0+ Build ID: d3b5bd4a07a619db6bee1c39c32280ac3c620532 CPU threads: 4; OS: Linux 4.8; UI render: default; VCL: gtk3; Locale: ca-ES (ca_ES.UTF-8); Calc: group - Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a) -LibreOffice 3.3.0 OOO330m19 (Build:6) tag libreoffice-3.3.0.4
Mark Hung committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=cf3cc3e1c6da6eaaba35f9daa0452b2e0e98a88d tdf#106639 Don't add space if Snap To Chars of text grid is effective. It will be available in 5.4.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Hello, Is this bug fixed? If so, could you please close it as RESOLVED FIXED?