tdf#106639 Don't add space if Snap To Chars of text grid is effective.

SwFntObj::DrawText() don't process added space of justified text if
Snap to Chars is effective when text grid is Lines and Chars, however
SwTextCursor::GetCursorOfst and SwTextCursor::GetCharRect count them
despite that and make the cursor movement irregular.

Change-Id: Ic31577e207b5a033298970a831016221f99d3499